// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button color 1`] = `
<div role="dialog" class="zv-dialog" name="zv-dialog-bounce">
  <div class="zv-hairline--top zv-dialog__footer zv-dialog__footer--buttons"><button class="zv-button zv-button--default zv-button--large zv-dialog__cancel" style="color: white;"><span class="zv-button__text">取消</span></button><button class="zv-button zv-button--default zv-button--large zv-dialog__confirm zv-hairline--left" style="color: red;"><span class="zv-button__text">确认</span></button></div>
</div>
`;

exports[`button text 1`] = `
<div role="dialog" class="zv-dialog" name="zv-dialog-bounce">
  <div class="zv-hairline--top zv-dialog__footer zv-dialog__footer--buttons"><button class="zv-button zv-button--default zv-button--large zv-dialog__cancel"><span class="zv-button__text">Custom cancel</span></button><button class="zv-button zv-button--default zv-button--large zv-dialog__confirm zv-hairline--left"><span class="zv-button__text">Custom confirm</span></button></div>
</div>
`;

exports[`default slot 1`] = `
<div role="dialog" class="zv-dialog" name="zv-dialog-bounce">
  <div class="zv-dialog__content">Custom Message</div>
  <div class="zv-hairline--top zv-dialog__footer"><button class="zv-button zv-button--default zv-button--large zv-dialog__confirm"><span class="zv-button__text">确认</span></button></div>
</div>
`;

exports[`title slot 1`] = `
<div role="dialog" class="zv-dialog" name="zv-dialog-bounce">
  <div class="zv-dialog__header zv-dialog__header--isolated">Custom Title</div>
  <div class="zv-hairline--top zv-dialog__footer"><button class="zv-button zv-button--default zv-button--large zv-dialog__confirm"><span class="zv-button__text">确认</span></button></div>
</div>
`;
